--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "module",
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.36.0",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "@types/node-telegram-bot-api": "^0.64.13",
     "better-sqlite3": "^12.6.2",
     "blessed": "^0.1.81",
@@ -28,10 +29,12 @@
     "node-telegram-bot-api": "^0.67.0",
     "playwright": "^1.58.2",
     "playwright-core": "^1.58.2",
+    "qrcode-terminal": "^0.12.0",
     "sqlite-vec": "^0.1.7-alpha.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "whatsapp-web.js": "^1.34.6",
     "ws": "^8.19.0"
   },
   "devDependencies": {
@@ -39,6 +42,7 @@
     "@types/blessed": "^0.1.27",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/ws": "^8.18.1"
   }
 }
