--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "express": "^5.2.1",
     "groq-sdk": "^0.37.0",
     "node-cron": "^4.2.1",
-    "node-telegram-bot-api": "^0.63.0",
+    "node-telegram-bot-api": "^0.67.0",
     "node-windows": "^1.0.0-beta.8",
     "playwright": "^1.58.2",
     "playwright-core": "^1.58.2",
@@ -67,5 +67,11 @@
     "@vitest/coverage-v8": "^4.0.18",
     "supertest": "^7.2.2",
     "vitest": "^4.0.18"
+  },
+  "overrides": {
+    "tar-fs": "^3.1.1",
+    "ws": "^8.19.0",
+    "request": "npm:@cypress/request@^3.0.8",
+    "request-promise": "npm:@cypress/request-promise@^5.0.0"
   }
 }
